# human-knowledge-protocol

./: Cargo.toml  LICENSE  README.md  record anatomy.odg
1 design/rough ideas/: .~lock.record anatomy.odg#  .~lock.ui searchpage.odg#  ui searchpage.odg
cli-simple/: cargo.toml
cli-simple/src/: main.rs
hkp/: cargo.toml
rough ideas/: fact.odg  record anatomy.odg  slideshow.odg  ui searchpage.odg
src/: main.rs  network.rs
