[package]
name = "human-knowledge-protocol"
version = "0.1.0"
authors = ["Daniel Herkert <daniel.herkert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
tokio = { version = "1.5", features = ["full"] }
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main"}
